[package]
name = "crom"
version = "999.9.9-SNAPSHOT"
authors = ["Ethan Hall <ethan@ehdev.io>"]
edition = "2018"

[dependencies]
log = "0.4"
dotenv = "*"
async-trait = "0.1"
flexi_logger = { version = "0.17", features = ["specfile", "compress"]  }
clap = { git = "https://github.com/clap-rs/clap/", tag = "v3.0.0-beta.2" }
error-chain = "0.12"
colored = "2.0"
git2 = { version = "0.13", default-features = false }
chrono = "0.4"
serde = { version =  "1.0", features = ["rc", "derive"] }
toml = "0.5"
regex = "1.3"
toml_edit = "0.2"
rust-ini = "0.15"
xmltree = "0.10"
json = "*"
reqwest = { version = "0.10", features = ["rustls-tls", "gzip"] }
indicatif = "0.15"
mime_guess = "2.0"
mime = "0.3"
futures = "0.3"
url = "2.1"
zip = "0.5"
libflate = "1.0"
tempfile = "3.1"
tokio = { version = "0.2", features = ["full"] }
tar = "0.4"
hyper = "0.13"
serde_json = { version = "1.0", features = ["preserve_order"] }
error-enum = { git = "https://github.com/ethankhall/error-enum-generator", rev = "b5f3276a8d967fc58149d0698a342539ebcec55e" }

[dev-dependencies]
assert_cmd = "0.11"
tempdir = "0.3"
predicates = "1.0"
mockito = "*"