[package]
name = "crom"
version = "999.9.9-SNAPSHOT"
authors = ["Ethan Hall <ethan@ehdev.io>"]
edition = "2021"

[dependencies]
human-panic = "1.0.3"
log = "0.4"
dotenv = "*"
async-trait = "0.1"
flexi_logger = { version = "0.17", features = ["specfile", "compress"]  }
clap = { version = "3.1.18", features = ["derive", "env", "cargo"]  }
error-chain = "0.12"
git2 = { version = "0.13", default-features = false }
serde = { version =  "1", features = ["rc", "derive"] }
toml = "0.5"
regex = "1"
toml_edit = "0.2"
rust-ini = "0.16"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "rustls-tls-native-roots", "gzip"] }
tempfile = "3.1"
tokio = { version = "1", features = ["full"] }
serde_json = { version = "1", features = ["preserve_order"] }

[features]
gh-cli = []

[dev-dependencies]
assert_cmd = "1.0"
tempdir = "0.3"
predicates = "1.0"
mockito = "*"