[package]
name = "crom-config"
version = "999.9.9-SNAPSHOT"
authors = ["Ethan Hall <ethan@ehdev.io>"]
edition = "2018"

[dependencies]
log = "0.4"
git2 = { version = "0.7", default-features = false }
chrono = "0.4"
serde = "1.0"
serde_derive = "1.0"
toml = "0.4"
regex = "1.1"
toml_edit = "0.1"
rust-ini = "0.13"